chore: install simplex and prng

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/vladjerca/proceduralart/issues"
   },
-  "homepage": "https://github.com/vladjerca/proceduralart#readme"
+  "homepage": "https://github.com/vladjerca/proceduralart#readme",
+  "dependencies": {
+    "simplex-noise": "^4.0.3",
+    "toosoon-prng": "^3.0.0"
+  }
 }
